--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3954,14 +3954,14 @@ details.collapse summary::-webkit-details-marker {
 .h-9 {
   height: 2.25rem;
 }
+.h-\[100px\] {
+  height: 100px;
+}
 .h-\[10px\] {
   height: 10px;
 }
 .h-\[174px\] {
   height: 174px;
-}
-.h-\[200px\] {
-  height: 200px;
 }
 .h-\[210px\] {
   height: 210px;
@@ -3978,14 +3978,14 @@ details.collapse summary::-webkit-details-marker {
 .h-\[498px\] {
   height: 498px;
 }
-.h-\[50px\] {
-  height: 50px;
-}
 .h-\[52px\] {
   height: 52px;
 }
 .h-\[666px\] {
   height: 666px;
+}
+.h-\[73px\] {
+  height: 73px;
 }
 .h-\[809px\] {
   height: 809px;
@@ -4096,6 +4096,9 @@ details.collapse summary::-webkit-details-marker {
 .w-\[200px\] {
   width: 200px;
 }
+.w-\[240px\] {
+  width: 240px;
+}
 .w-\[280px\] {
   width: 280px;
 }
@@ -4129,9 +4132,6 @@ details.collapse summary::-webkit-details-marker {
 .w-\[4px\] {
   width: 4px;
 }
-.w-\[50px\] {
-  width: 50px;
-}
 .w-\[522px\] {
   width: 522px;
 }
@@ -4146,6 +4146,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-\[90\%\] {
   width: 90%;
+}
+.w-\[90px\] {
+  width: 90px;
 }
 .w-auto {
   width: auto;
@@ -4275,9 +4278,6 @@ details.collapse summary::-webkit-details-marker {
 .flex-shrink {
   flex-shrink: 1;
 }
-.flex-shrink-0 {
-  flex-shrink: 0;
-}
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -4341,9 +4341,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -4549,9 +4546,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .rounded-md {
   border-radius: 0.375rem;
-}
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 .rounded-l {
   border-top-left-radius: 0.25rem;
@@ -5906,12 +5900,12 @@ details.collapse summary::-webkit-details-marker {
     grid-auto-flow: column;
   }
 
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
-  .sm\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:grid-cols-5 {
@@ -6066,10 +6060,6 @@ details.collapse summary::-webkit-details-marker {
     margin-right: 0px;
   }
 
-  .md\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
   .md\:mt-8 {
     margin-top: 2rem;
   }
@@ -6102,6 +6092,10 @@ details.collapse summary::-webkit-details-marker {
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -6225,8 +6219,8 @@ details.collapse summary::-webkit-details-marker {
     display: grid;
   }
 
-  .lg\:h-\[50px\] {
-    height: 50px;
+  .lg\:h-\[34px\] {
+    height: 34px;
   }
 
   .lg\:max-h-\[600px\] {
@@ -6243,10 +6237,6 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:w-\[1440px\] {
     width: 1440px;
-  }
-
-  .lg\:w-\[34px\] {
-    width: 34px;
   }
 
   .lg\:w-\[450px\] {
