--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3665,6 +3665,9 @@ details.collapse summary::-webkit-details-marker {
 .left-0 {
   left: 0px;
 }
+.left-1 {
+  left: 0.25rem;
+}
 .left-14 {
   left: 3.5rem;
 }
@@ -3697,6 +3700,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .top-0 {
   top: 0px;
+}
+.top-1 {
+  top: 0.25rem;
 }
 .top-1\/2 {
   top: 50%;
@@ -3770,6 +3776,9 @@ details.collapse summary::-webkit-details-marker {
 .m-8 {
   margin: 2rem;
 }
+.m-auto {
+  margin: auto;
+}
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -3813,14 +3822,14 @@ details.collapse summary::-webkit-details-marker {
 .-mt-12 {
   margin-top: -3rem;
 }
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
 }
 .mb-5 {
   margin-bottom: 1.25rem;
@@ -3858,11 +3867,17 @@ details.collapse summary::-webkit-details-marker {
 .mt-11 {
   margin-top: 2.75rem;
 }
+.mt-12 {
+  margin-top: 3rem;
+}
 .mt-16 {
   margin-top: 4rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
+}
+.mt-3 {
+  margin-top: 0.75rem;
 }
 .mt-4 {
   margin-top: 1rem;
@@ -3966,8 +3981,20 @@ details.collapse summary::-webkit-details-marker {
 .h-\[174px\] {
   height: 174px;
 }
+.h-\[18px\] {
+  height: 18px;
+}
+.h-\[20px\] {
+  height: 20px;
+}
 .h-\[210px\] {
   height: 210px;
+}
+.h-\[25px\] {
+  height: 25px;
+}
+.h-\[26px\] {
+  height: 26px;
 }
 .h-\[295px\] {
   height: 295px;
@@ -4090,6 +4117,12 @@ details.collapse summary::-webkit-details-marker {
 .w-\[10px\] {
   width: 10px;
 }
+.w-\[143px\] {
+  width: 143px;
+}
+.w-\[150px\] {
+  width: 150px;
+}
 .w-\[161px\] {
   width: 161px;
 }
@@ -4104,6 +4137,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-\[240px\] {
   width: 240px;
+}
+.w-\[25px\] {
+  width: 25px;
 }
 .w-\[280px\] {
   width: 280px;
@@ -4126,6 +4162,9 @@ details.collapse summary::-webkit-details-marker {
 .w-\[332px\] {
   width: 332px;
 }
+.w-\[350px\] {
+  width: 350px;
+}
 .w-\[363px\] {
   width: 363px;
 }
@@ -4134,6 +4173,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-\[407px\] {
   width: 407px;
+}
+.w-\[48px\] {
+  width: 48px;
 }
 .w-\[4px\] {
   width: 4px;
@@ -4209,6 +4251,9 @@ details.collapse summary::-webkit-details-marker {
 .max-w-7xl {
   max-width: 80rem;
 }
+.max-w-\[1096px\] {
+  max-width: 1096px;
+}
 .max-w-\[1200px\] {
   max-width: 1200px;
 }
@@ -4224,8 +4269,14 @@ details.collapse summary::-webkit-details-marker {
 .max-w-\[1444px\] {
   max-width: 1444px;
 }
+.max-w-\[180px\] {
+  max-width: 180px;
+}
 .max-w-\[200px\] {
   max-width: 200px;
+}
+.max-w-\[205px\] {
+  max-width: 205px;
 }
 .max-w-\[2px\] {
   max-width: 2px;
@@ -4642,6 +4693,14 @@ details.collapse summary::-webkit-details-marker {
   --tw-border-opacity: 1;
   border-color: var(--fallback-nc,oklch(var(--nc)/var(--tw-border-opacity)));
 }
+.border-primary {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-p,oklch(var(--p)/var(--tw-border-opacity)));
+}
+.border-secondary {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-s,oklch(var(--s)/var(--tw-border-opacity)));
+}
 .border-transparent {
   border-color: transparent;
 }
@@ -4687,6 +4746,10 @@ details.collapse summary::-webkit-details-marker {
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .bg-gray-300 {
   --tw-bg-opacity: 1;
@@ -4966,6 +5029,9 @@ details.collapse summary::-webkit-details-marker {
 .pt-6 {
   padding-top: 1.5rem;
 }
+.pt-8 {
+  padding-top: 2rem;
+}
 .pt-\[5px\] {
   padding-top: 5px;
 }
@@ -4983,6 +5049,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .text-end {
   text-align: end;
+}
+.\!text-\[12px\] {
+  font-size: 12px !important;
 }
 .\!text-sm {
   font-size: 0.875rem !important;
@@ -5140,6 +5209,10 @@ details.collapse summary::-webkit-details-marker {
 .tracking-\[-3px\] {
   letter-spacing: -3px;
 }
+.\!text-base-100 {
+  --tw-text-opacity: 1 !important;
+  color: var(--fallback-b1,oklch(var(--b1)/var(--tw-text-opacity))) !important;
+}
 .text-\[\#057EB5\] {
   --tw-text-opacity: 1;
   color: rgb(5 126 181 / var(--tw-text-opacity));
@@ -5166,6 +5239,10 @@ details.collapse summary::-webkit-details-marker {
 .text-base-100 {
   --tw-text-opacity: 1;
   color: var(--fallback-b1,oklch(var(--b1)/var(--tw-text-opacity)));
+}
+.text-base-200 {
+  --tw-text-opacity: 1;
+  color: var(--fallback-b2,oklch(var(--b2)/var(--tw-text-opacity)));
 }
 .text-base-300 {
   --tw-text-opacity: 1;
@@ -5210,6 +5287,10 @@ details.collapse summary::-webkit-details-marker {
 .text-success {
   --tw-text-opacity: 1;
   color: var(--fallback-su,oklch(var(--su)/var(--tw-text-opacity)));
+}
+.text-warning {
+  --tw-text-opacity: 1;
+  color: var(--fallback-wa,oklch(var(--wa)/var(--tw-text-opacity)));
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -5691,8 +5772,19 @@ details.collapse summary::-webkit-details-marker {
   color: var(--fallback-ac,oklch(var(--ac)/var(--tw-text-opacity)));
 }
 
+.hover\:text-base-100:hover {
+  --tw-text-opacity: 1;
+  color: var(--fallback-b1,oklch(var(--b1)/var(--tw-text-opacity)));
+}
+
 .hover\:underline:hover {
   text-decoration-line: underline;
+}
+
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .focus\:outline-none:focus {
@@ -6073,6 +6165,10 @@ details.collapse summary::-webkit-details-marker {
     margin-right: 0px;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:mt-8 {
     margin-top: 2rem;
   }
@@ -6083,6 +6179,14 @@ details.collapse summary::-webkit-details-marker {
 
   .md\:w-1\/4 {
     width: 25%;
+  }
+
+  .md\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:max-w-\[1440px\] {
@@ -6109,6 +6213,10 @@ details.collapse summary::-webkit-details-marker {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:justify-center {
