--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3653,6 +3653,12 @@ details.collapse summary::-webkit-details-marker {
 .relative {
   position: relative;
 }
+.-left-2 {
+  left: -0.5rem;
+}
+.-right-2 {
+  right: -0.5rem;
+}
 .bottom-0 {
   bottom: 0px;
 }
@@ -4000,6 +4006,9 @@ details.collapse summary::-webkit-details-marker {
 .h-\[210px\] {
   height: 210px;
 }
+.h-\[217px\] {
+  height: 217px;
+}
 .h-\[25px\] {
   height: 25px;
 }
@@ -4033,6 +4042,9 @@ details.collapse summary::-webkit-details-marker {
 .h-\[88px\] {
   height: 88px;
 }
+.h-\[92px\] {
+  height: 92px;
+}
 .h-auto {
   height: auto;
 }
@@ -4057,6 +4069,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .max-h-\[300px\] {
   max-height: 300px;
+}
+.max-h-\[450px\] {
+  max-height: 450px;
 }
 .max-h-\[55px\] {
   max-height: 55px;
@@ -4512,6 +4527,9 @@ details.collapse summary::-webkit-details-marker {
 .gap-9 {
   gap: 2.25rem;
 }
+.gap-\[104px\] {
+  gap: 104px;
+}
 .gap-\[16px\] {
   gap: 16px;
 }
@@ -4627,6 +4645,9 @@ details.collapse summary::-webkit-details-marker {
 .rounded-sm {
   border-radius: 0.125rem;
 }
+.rounded-xl {
+  border-radius: 0.75rem;
+}
 .rounded-l {
   border-top-left-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -4685,6 +4706,10 @@ details.collapse summary::-webkit-details-marker {
 .border-\[\#C9CFCF\] {
   --tw-border-opacity: 1;
   border-color: rgb(201 207 207 / var(--tw-border-opacity));
+}
+.border-accent {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-a,oklch(var(--a)/var(--tw-border-opacity)));
 }
 .border-base-200 {
   --tw-border-opacity: 1;
@@ -4976,6 +5001,14 @@ details.collapse summary::-webkit-details-marker {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.py-\[28px\] {
+  padding-top: 28px;
+  padding-bottom: 28px;
+}
 .py-\[33px\] {
   padding-top: 33px;
   padding-bottom: 33px;
@@ -4997,6 +5030,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .pb-\[15px\] {
   padding-bottom: 15px;
+}
+.pb-\[18px\] {
+  padding-bottom: 18px;
 }
 .pb-\[7px\] {
   padding-bottom: 7px;
@@ -5976,6 +6012,10 @@ details.collapse summary::-webkit-details-marker {
     display: none;
   }
 
+  .sm\:h-\[218px\] {
+    height: 218px;
+  }
+
   .sm\:h-\[273px\] {
     height: 273px;
   }
@@ -5995,6 +6035,10 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:w-\[300px\] {
     width: 300px;
+  }
+
+  .sm\:w-\[351px\] {
+    width: 351px;
   }
 
   .sm\:w-\[522px\] {
@@ -6201,6 +6245,10 @@ details.collapse summary::-webkit-details-marker {
     display: flex;
   }
 
+  .md\:max-h-\[940px\] {
+    max-height: 940px;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -6347,6 +6395,14 @@ details.collapse summary::-webkit-details-marker {
 
 @media (min-width: 1024px) {
 
+  .lg\:-left-8 {
+    left: -2rem;
+  }
+
+  .lg\:-right-8 {
+    right: -2rem;
+  }
+
   .lg\:left-4 {
     left: 1rem;
   }
@@ -6407,6 +6463,10 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:w-24 {
     width: 6rem;
+  }
+
+  .lg\:w-\[1300px\] {
+    width: 1300px;
   }
 
   .lg\:w-\[1440px\] {
@@ -6505,8 +6565,16 @@ details.collapse summary::-webkit-details-marker {
     gap: 4rem;
   }
 
+  .lg\:gap-20 {
+    gap: 5rem;
+  }
+
   .lg\:gap-4 {
     gap: 1rem;
+  }
+
+  .lg\:gap-8 {
+    gap: 2rem;
   }
 
   .lg\:overflow-hidden {
@@ -6526,6 +6594,11 @@ details.collapse summary::-webkit-details-marker {
     background-color: var(--fallback-pc,oklch(var(--pc)/var(--tw-bg-opacity)));
   }
 
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .lg\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
@@ -6539,6 +6612,11 @@ details.collapse summary::-webkit-details-marker {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:py-10 {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
 
   .lg\:py-3 {
